--- a/ECS/ECS.csproj
+++ b/ECS/ECS.csproj
@@ -4,8 +4,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
-        <RootNamespace>TinyECS.Core</RootNamespace>
+        <RootNamespace>TinyECS</RootNamespace>
         <LangVersion>9</LangVersion>
+        <AssemblyName>ECS</AssemblyName>
     </PropertyGroup>
 
 </Project>
