refactor(core): streamline system and world interfaces for improved clarity and functionality

--- a/ECS/ECS.csproj
+++ b/ECS/ECS.csproj
@@ -9,4 +9,8 @@
         <AssemblyName>ECS</AssemblyName>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Inject\" />
+    </ItemGroup>
+
 </Project>
